--- a/nichole-portfolio/src/App.css
+++ b/nichole-portfolio/src/App.css
@@ -37,23 +37,22 @@ header nav li a {
   padding: 8px;
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/hero.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
+/*.hero-image {*/
+/*  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/hero.jpg");*/
+/*  height: 100%;*/
+/*  background-position: center;*/
+/*  background-repeat: no-repeat;*/
+/*  background-size: cover;*/
+/*  position: relative;*/
+/*}*/
 
-
-.hero-text, .hero-text1, .hero-text2, .hero-text3, .hero-text4 {
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
+/*.hero-text, .hero-text1, .hero-text2, .hero-text3, .hero-text4 {*/
+/*  text-align: center;*/
+/*  position: absolute;*/
+/*  left: 50%;*/
+/*  transform: translate(-50%, -50%);*/
+/*  color: white;*/
+/*}*/
 
 #container {
   min-height: 125vh;
